--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta http-equiv="Cache-Control" content="no-store">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>holding_page</title>
-  <link rel="stylesheet" href="assets/css/happy.css">
+  <title>waitakere</title>
+  <link rel="stylesheet" href="assets/css/waitakere.css">
   <link rel="shortcut icon" type="image/png" href="favicon.ico?v=1.0">
 </head>
 <body class="sm-body">
