--- a/index.html
+++ b/index.html
@@ -10,30 +10,13 @@
 </head>
 <body class="sm-body">
 <h1 class="guide">
-  a guide to wellness and growth
+  waitakere
 </h1>
 
-<!-- <div>
- <img src="./assets/images/fern_nobg.png" alt="fern_nobg">
-</div>
 
-<div class="fern">
- <img src="./assets/images/venus_nobg.png" alt="venus_nobg"
-  style="position:relative; left:50%">
-  <div class="overlay">
-      <div class="text">nurture</div>
-</div> -->
-
-
-----
 
 <div class="container">
-  <div class="fern">
-    <img src="./assets/images/fern_nobg.png" alt="fern_nobg">
-  </div>
-  <div class="venus">
-    <img src="./assets/images/venus_nobg.png" alt="venus_nobg">
-  </div>
+
 </div>
 
 </body>
