--- a/index.html
+++ b/index.html
@@ -5,19 +5,79 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>waitakere</title>
-  <link rel="stylesheet" href="assets/css/waitakere.css">
+  <link rel="stylesheet" href="assets/css/reference_point.css">
   <link rel="shortcut icon" type="image/png" href="favicon.ico?v=1.0">
 </head>
+
+
 <body class="sm-body">
-<h1 class="guide">
-  waitakere > Te Wao Nui o Tiriwa
-</h1>
-
-
+  <h2>
+    Reference Point
+  </h2>
+  <h1>
+    WAITĀKERE - Te Wao Nui o Tiriwa
+  </h1>
+  <br>
+  <h3>
 
 <div class="container">
-
-</div>
+  <br><br><br><br><br><br><br><br><br>&#9658;<br>
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+  &#9658;
+  <table class="a">
+        <tr>
+          <th><h1>Open Tracks</h1></th>
+          <th><h1>Waitakere Ranges Map</h1></th>
+        </tr>
+        <tr>
+      <td>
+  <a href="default.asp" target="_blank">Te Henga Walkway </a><br>
+  <a href="default.asp" target="_blank">Lake Wainamu Track</a><br>
+  <a href="default.asp" target="_blank">Pay O Te Rangi Farm Summit Track</a><br>
+  <a href="default.asp" target="_blank">Pay O Te Rangi Farm Track</a><br>
+  <a href="default.asp" target="_blank">Waitakere Dam Walk</a><br>
+  <a href="default.asp" target="_blank">Anawhata Beach Track</a><br>
+  <a href="default.asp" target="_blank">Rose Track</a><br>
+  <a href="default.asp" target="_blank">White Track</a><br>
+  <a href="default.asp" target="_blank">Cutty Grass Track</a><br>
+  <a href="default.asp" target="_blank">Ian Wells Track</a><br>
+  <a href="default.asp" target="_blank">McElwain Lookout Track</a><br>
+  <a href="default.asp" target="_blank">Laird Thompson Track</a><br>
+  <a href="default.asp" target="_blank">Marawhara Walk</a><br>
+  <a href="default.asp" target="_blank">Lion Rock Track</a><br>
+  <a href="default.asp" target="_blank">Byers Walk</a><br>
+  <a href="default.asp" target="_blank">Connect Track</a><br>
+  <a href="default.asp" target="_blank">Winstone Track</a><br>
+  <a href="default.asp" target="_blank">Ussher Track</a><br>
+  <a href="default.asp" target="_blank">Knutzen Track</a><br>
+  <a href="default.asp" target="_blank">Te Ahuahu Road</a><br>
+  <a href="default.asp" target="_blank">Tasman Lookout Track</a><br>
+  <a href="default.asp" target="_blank">Comans Track</a><br>
+  <a href="default.asp" target="_blank">Ahu Ahu Track</a><br>
+  <a href="default.asp" target="_blank">Arataki Lookout Track</a><br>
+  <a href="default.asp" target="_blank">Arataki Nature Trail</a><br>
+  <a href="default.asp" target="_blank">Zigzag Track</a><br>
+  <a href="default.asp" target="_blank">Parker Track</a><br>
+  <a href="default.asp" target="_blank">Beveridge Track</a><br>
+  <a href="default.asp" target="_blank">Slip Track</a><br>
+  <a href="default.asp" target="_blank">Taraire Track</a><br>
+  <a href="default.asp" target="_blank">Pohutakawa Glade Walk</a><br>
+  <a href="default.asp" target="_blank">Jubilee Walk</a><br>
+  <a href="default.asp" target="_blank">Kakamatua Beach Walk</a><br>
+  <a href="default.asp" target="_blank">Orpheus Graves Walk</a><br>
+  <a href="default.asp" target="_blank">Monument Track</a><br>
+  <a href="default.asp" target="_blank">Spragg Monument Track</a><br>
+  <a href="default.asp" target="_blank">Huia Lookout</a><br>
+  <a href="default.asp" target="_blank">Manukau Timber Company Heritage Trail</a><br>
+  <a href="default.asp" target="_blank"></a><br>
+  <a href="default.asp" target="_blank"></a><br>
+  <a href="default.asp" target="_blank"></a><br>
+  <a href="default.asp" target="_blank"></a><br>
+  </h3> </td>
+  <td><img src="./assets/images/map.png" alt="map"></td>
+</tr>
+</table>
+    </div>
 
 </body>
 </html>
