--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
   <br><br><br><br><br><br><br><br><br>&#9658;<br>
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   &#9658;
+  <img src="./assets/images/map.png" alt="map">
   <table class="a">
         <tr>
           <th><h1>Waitakere Ranges Map</h1></th>
           <th><h1>Open Tracks</h1></th>
         </tr>
         <tr>
-    <td><img src="./assets/images/map.png" alt="map"></td>
+
       <td>
   <a href="default.asp" target="_blank">Te Henga Walkway </a><br>
   <a href="default.asp" target="_blank">Lake Wainamu Track</a><br>
