--- a/index.html
+++ b/index.html
@@ -11,15 +11,10 @@
 
 
 <body class="sm-body">
-  <h2>
-    Reference Point
-  </h2>
-  <h1>
-    WAITĀKERE - Te Wao Nui o Tiriwa
-  </h1>
+  <h2>Reference Point</h2>
+  <h1>WAITĀKERE - Te Wao Nui o Tiriwa</h1>
   <br>
   <h3>
-
 <div class="container">
   <br><br><br><br><br><br><br><br><br>&#9658;<br>
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -69,10 +64,6 @@
   <a href="default.asp" target="_blank">Spragg Monument Track</a><br>
   <a href="default.asp" target="_blank">Huia Lookout</a><br>
   <a href="default.asp" target="_blank">Manukau Timber Company Heritage Trail</a><br>
-  <a href="default.asp" target="_blank"></a><br>
-  <a href="default.asp" target="_blank"></a><br>
-  <a href="default.asp" target="_blank"></a><br>
-  <a href="default.asp" target="_blank"></a><br>
   </h3> </td>
 </tr>
 </table>
