--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   <table class="a">
         <tr>
           <th><h1>Open Tracks</h1></th>
+          <th><h1>Flora and Fauna</h1></th>
         </tr>
         <tr>
-
       <td>
   <a href="default.asp" target="_blank">Te Henga Walkway </a><br>
   <a href="default.asp" target="_blank">Lake Wainamu Track</a><br>
@@ -65,6 +65,8 @@
   <a href="default.asp" target="_blank">Huia Lookout</a><br>
   <a href="default.asp" target="_blank">Manukau Timber Company Heritage Trail</a><br>
   </h3> </td>
+
+  <td> flora </td>
 </tr>
 </table>
 <img src="./assets/images/map.png" alt="map">
