--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Cache-Control" content="no-store">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>waitakere</title>
+  <title>reference_point</title>
   <link rel="stylesheet" href="assets/css/reference_point.css">
   <link rel="shortcut icon" type="image/png" href="favicon.ico?v=1.0">
 </head>
