--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 <body class="sm-body">
-  <h2>Reference Point</h2>
+  <h2>Reference Point / home</h2>
   <h1>WAITĀKERE - Te Wao Nui o Tiriwa</h1>
   <br>
   <h3>
